# iMatrix_src

./: .env.sample  .gitignore  .gitmodules  BUILD_QUICK_REF.md  CELLULAR_BLACKLIST_COMPLETE_SOLUTION.md  CELLULAR_BLACKLIST_DEBUG_HANDOVER_2025-11-25_0756.md  CELLULAR_BLACKLIST_FIX_COMPLETE.md  CELLULAR_FIXES_COMPLETE_STATUS.md  CELLULAR_FIX_COMPREHENSIVE_REVIEW.md  CELLULAR_MODEM_RESET_PLAN_2025-11-25_0830.md  CELLULAR_RESCAN_FIX_COMPLETE.md  CELL_OPERATORS_INTEGRATION_GUIDE.md  CLAUDE.md  COMPLETE_BLACKLIST_SOLUTION.md  COMPLETE_FIX_SUMMARY.md  CORRECTED_CELLULAR_FIX_IMPLEMENTATION.md  CORRECTED_INTEGRATION_STEPS.md  CRITICAL_DATA_LOSS_BUG_DISCOVERY.md  CRITICAL_FIX_PATCH.md  DATA_LOSS_BUG_FIX_TEST_GUIDE.md  DATA_LOSS_BUG_RESOLUTION_PLAN.md  DATA_LOSS_FIX_TODO.md  DATA_STORE_THREAD_SAFETY_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_HANDOVER_DOCUMENT.md  DEVELOPER_HANDOVER_HARDWARE_RESET_2025-11-25_1328.md  DOCUMENTATION_PACKAGE_INDEX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED_REPORT.md  IMATRIX_UPLOAD_SYSTEM_OPERATION_GUIDE.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_VALIDATION_REPORT.md  IMPORTANT_FIXES_COMPLETE.patch  IMPORTANT_FIXES_SUMMARY.md  INTEGRATION_CHECKLIST.md  Instructions.txt  NET15_ANALYSIS_AND_SOLUTION.md  NET16_SCRIPT_TIMEOUT_ISSUE.md  (+60 more)
.claude/: documentation_checklist.md  settings.json
Profiler/: .gitignore  README.md
Profiler-orig/: README.md
docs/: CAN_PERFORMANCE_DEPLOYMENT.md  CAN_PERFORMANCE_START_HERE.md  CLI_and_Debug_System_Complete_Guide.md  Claude_review_MOA.md  Developer_Debugging_Guide.md  EVENT_SENSOR_Timestamp_Bug_Report.md  FINAL_NETWORK_FIX_SUMMARY.md  FINAL_STATUS_NETWORK_FIXES.md  Fleet-Connect-1_architecture.md  Fleet-Connect-Overview.md  GPS_Altitude_Implementation_Complete.md  GPS_Event_Logging_System.md  GPS_Function_Optimization.md  GPS_Timestamp_Parameter_Feature.md  Gemini_review_MOA.md  IMPLEMENTATION_SUMMARY.md  MM1_TEST_REPORT.md  MM2_Bug_Analysis_Plan.md  MM2_Integration_Complete.md  MM2_Stress_Test_Hang_Fix.md  MM2_Test_Suite_Implementation_Status.md  MM2_Upload_Source_Mismatch_Bug_Fix.md  NETWORK_DEBUG_COMPLETION_SUMMARY.md  NETWORK_FIXES_COMPLETION_REPORT.md  Network_Manager_Architecture.md  Network_Manager_Design_Flaw_Remediation_Plan.md  POWER_CYCLE_LOG_ANALYSIS.md  POWER_CYCLE_TEST_PLAN.md  Upload_Source_Switching_Bug_Fix_Plan.md  WORK_COMPLETION_SUMMARY.md  WiFi_Diagnostics_README.md  add_check_for_udhcpd_prompt.md  add_dash_r_command_line.md  add_dash_s_command_line_plan.md  add_dynamic_can_monitor_plan.md  add_imx_pause_plan.md  add_imx_pause_prompt.md  add_ms_command.md  add_ms_command_prompt.md  add_pending_diagnostics_prompt.md  (+90 more)
external_tools/: expect-arm-cross.cache  patch_expect_configure.py  patch_expect_v2.py  patch_expect_v3.py  patch_expect_v4.py  patch_expect_v5.py  run_expect_configure.sh
logs/: Aptera_details.txt  BMW_dashbaord_1.json  HM_onestepgps.trc  HM_pui.trc  Working Copy of net10.txt  boot1.txt  cell_1.txt  chat.json  mm1.txt  net1.txt  net10.txt  net14.txt  net15.txt  net16.txt  net17.txt  net18.txt  net19.txt  net2.txt  net3.txt  net4.txt  net5.txt  net6.txt  net7.txt  net_fail1.txt  notification.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  routing1.txt  routing3.txt  routing4.txt  routing5.txt  scan1.txt  session_start.json  stop.json  subagent_stop.json  upload6.txt  upload7.txt  upload8.txt  upload9.txt  (+1 more)
memory_manager_v2/: (null)metadata.json  CMakeLists.txt  DEPLOYMENT_PLAN.md  DEPLOYMENT_README.md  IMPLEMENTATION_STATUS.md  INTEGRATION_STEPS.md  Makefile  deploy_v2.sh  implementation_todo.md  test_harness  verify_deployment.sh
memory_manager_v2.first_cut/: CMakeLists.txt  detailed_todo_list.md  implementation_plan.md  plan.md
memory_manager_v2.first_cut/src/sensor_storage/api/: sensor_storage.h
memory_manager_v2.first_cut/src/sensor_storage/platform/: ss_linux.c  ss_linux.h
memory_manager_v2.first_cut/src/sensor_storage/utils/: ss_crc.c  ss_crc.h  ss_mutex.c  ss_mutex.h
memory_manager_v2/FC_filesystem/: million_record_test.csv
memory_manager_v2/include/: data_storage.h  disk_operations.h  platform_config.h
memory_manager_v2/src/interfaces/: legacy_interface.c  memory_manager_tsd_evt.c
memory_manager_v2/src/platform/: wiced_platform.c
scripts/: fc1  (+16 more)
test_scripts/: BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  CROSS_PLATFORM_NOTES.md  DIAGNOSTIC_REPORT.md  Makefile  NETMGR_TIMING_TEST_GUIDE.md  NETWORK_TEST_MODE_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  VSCODE_SETUP.md  VSCODE_TROUBLESHOOTING.md  bare_minimal_test.c  blank.c  blank.h  clear_old_data.sh  comprehensive_memory_test.c  debug_test.c  debug_write_test.c  diagnostic_test.c  gdb.txt  imatrix_stubs.c  memory_test_csb_csd.c  memory_test_csb_csd.h  memory_test_disk_sim.c  memory_test_disk_sim.h  memory_test_init.c  memory_test_init.h  minimal_test.c  module_link_test.c  monitor_tiered_storage.sh  network_improvements_summary.md  network_progress.md  network_todo.md  next_steps.md  performance_test.c  progress.md  project_todo.md  projectplan.md  (+30 more)
test_scripts/test_logs/: test_report_20250706_172159.txt  test_report_20250706_172721.txt  test_report_20250706_172848.txt  test_report_20250706_172930.txt  test_report_20250706_173306.txt  test_report_20250706_173536.txt  test_report_20250706_174242.txt  test_report_20250706_174854.txt  test_report_20250707_100807.txt  test_report_20250707_105516.txt  test_report_20250707_133849.txt  test_report_20250707_134031.txt  test_report_20250707_134117.txt  test_report_20250707_134209.txt  test_report_20250707_140539.txt  test_report_20250707_140802.txt  test_report_20250707_141008.txt  test_report_20250707_141833.txt  test_report_20250707_142055.txt  test_report_20250707_144532.txt  test_report_20250707_145258.txt  test_report_20250709_100938.txt  test_report_20250709_103719.txt  test_report_20250709_103907.txt  test_report_20250709_104844.txt  test_report_20250709_104925.txt  test_report_20250709_105334.txt  test_report_20250709_125518.txt
test_system/: CMakeLists.txt  README.md  can_test.c
(+1073 files in other folders)
